--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,28 @@
 body {
   background-color: rgb(255, 255, 255);
-  font: 400 0.938em/1.38 'Fauna One';
-  color: rgb(255, 255, 255);
+  font: 400 1em/1.38 'Fauna One';
+  color: rgb(0, 0, 0);
+}
+
+.container {
+  float: left;
+}
+
+.container .container {
+  width: 100%;
+  height: 52px;
+}
+
+.container .element {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-color: rgb(222, 222, 222);
+}
+
+.container .text {
+  font-size: 1em;
+  color: rgb(0, 0, 0);
 }
 
 .element {
@@ -12,9 +33,27 @@ body {
   float: left;
 }
 
-.text-5 p,
-.text-6 p {
-  margin-bottom: 1em;
+.container-1 {
+  position: relative;
+  z-index: 10;
+  width: 18.1666666666%;
+  height: 22px;
+  margin: 5px 0 0 1.08073%;
+}
+
+.container-2 {
+  position: relative;
+  z-index: 8;
+  width: 4.4166666666%;
+  height: 51px;
+  margin: 12px 0 0 75.66146%;
+}
+
+.container-4 {
+  clear: both;
+  width: 25.0833333333%;
+  height: 407px;
+  margin: 59px 0 0 37.75%;
 }
 
 .element-1 {
@@ -27,15 +66,6 @@ body {
   background-position: center center;
 }
 
-.element-10 {
-  position: relative;
-  z-index: 7;
-  width: 38.5833333333%;
-  height: 197px;
-  margin: -247px 0 0 5.07422%;
-  background-color: rgba(124, 134, 126, 0.76);
-}
-
 .element-2 {
   position: relative;
   z-index: 2;
@@ -45,132 +75,36 @@ body {
 }
 
 .element-3 {
-  width: 32.8333333333%;
-  height: 394px;
-  margin: 13px 0 0 33.75%;
-  background: url('../images/Mezky-logo-single-WHT-2000px(6).jpg'), url('../images/Mezky-logo-single-WHT-350PX.jpg') rgb(222, 222, 222);
-  background-repeat: repeat-y, no-repeat;
-  background-size: cover, cover;
-  background-position: center center, center center;
-  background-attachment: scroll, scroll;
+  width: 127.6300578034%;
+  height: 69px;
+  margin: -7px 0 0 -14.65212%;
+  background-image: url('../images/instagram-1581266_1920(2).jpg');
 }
 
 .element-4 {
-  clear: both;
-  width: 5.75%;
-  height: 69px;
-  margin: 123px 0 0 47.25%;
-  background: url('../images/instagram-1581266_1920(2).jpg') rgb(222, 222, 222);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+  width: 86.8312757201%;
+  height: 328px;
+  margin-left: 5.76132%;
+  background-image: url('../images/Mezky-logo-single-WHT-350PX.jpg');
 }
 
 .element-5 {
   clear: both;
-  width: 2.9166666666%;
-  height: 35px;
-  margin: 10px 0 0 48.66667%;
-  background: url('../images/down.png') rgb(222, 222, 222);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
-}
-
-.element-6 {
-  position: relative;
-  clear: both;
-  z-index: 1;
-  width: 100%;
-  height: 325px;
-  margin-top: 20px;
-  background-color: rgb(222, 222, 222);
-}
-
-.element-7 {
-  position: relative;
-  clear: both;
-  z-index: 4;
-  width: 98.25%;
-  height: 310px;
-  margin: -319px 0 0 1.08073%;
-  background: url('../images/IMG-7487.JPG') rgb(222, 222, 222);
-  background-size: cover;
-  background-position: right top;
-}
-
-.element-8 {
-  position: relative;
-  clear: both;
-  z-index: 5;
   width: 100%;
   height: 318px;
-  margin: 18px 0 0 0.5%;
+  margin-top: 104px;
   background-color: rgba(0, 0, 0, 0.69);
-}
-
-.element-9 {
-  position: relative;
-  clear: both;
-  z-index: 8;
-  width: 8.0833333333%;
-  height: 27px;
-  margin: -283px 0 0 5.08073%;
-  background-color: rgb(128, 128, 128);
 }
 
 .text-1 {
   position: relative;
   clear: both;
   z-index: 3;
-  width: 4%;
+  width: 4.6666666666%;
   min-height: 40px;
-  margin: -57px 0 0 1.07422%;
+  margin: -58px 0 0 1.16146%;
   font-family: Oswald;
-  font-size: 2.333em;
-  font-weight: 700;
+  font-size: 2.188em;
+  font-weight: 300;
   color: rgb(230, 230, 230);
-}
-
-.text-2 {
-  clear: both;
-  margin: 27px 0 0 43.25%;
-  font-size: 1.067em;
-  color: rgb(0, 0, 0);
-}
-
-.text-3 {
-  clear: both;
-  margin: 7px 0 0 46.08203%;
-  font-size: 1.067em;
-  color: rgb(0, 0, 0);
-}
-
-.text-4 {
-  clear: both;
-  margin: 2px 0 0 41.08203%;
-  font-size: 1.067em;
-  color: rgb(0, 0, 0);
-}
-
-.text-5 {
-  position: relative;
-  clear: both;
-  z-index: 13;
-  width: 95.5%;
-  min-height: 216px;
-  margin: -275px 0 0 5.08073%;
-  font-size: 1em;
-  text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-.text-6 {
-  position: relative;
-  z-index: 9;
-  width: 38.25%;
-  min-height: 250px;
-  margin: -280px 0 0 5.75%;
-  font-size: 1.067em;
-  color: rgb(255, 255, 255);
 }
