--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(255, 255, 255);
-  font: 400 1em/1.38 'Fauna One';
+  font: 400 1em/1.38 Arial;
   color: rgb(0, 0, 0);
 }
 
@@ -9,8 +9,9 @@ body {
 }
 
 .container .container {
-  width: 100%;
-  height: 52px;
+  width: 91.1111111111%;
+  height: 43px;
+  margin-top: -3px;
 }
 
 .container .element {
@@ -44,16 +45,16 @@ body {
 .container-2 {
   position: relative;
   z-index: 8;
-  width: 4.4166666666%;
-  height: 51px;
-  margin: 12px 0 0 75.66146%;
+  width: 3.75%;
+  height: 43px;
+  margin: 3px 0 0 76.6692708333%;
 }
 
 .container-4 {
   clear: both;
   width: 25.0833333333%;
   height: 407px;
-  margin: 59px 0 0 37.75%;
+  margin: 76px 0 0 37.75%;
 }
 
 .element-1 {
@@ -75,9 +76,8 @@ body {
 }
 
 .element-3 {
-  width: 127.6300578034%;
-  height: 69px;
-  margin: -7px 0 0 -14.65212%;
+  width: 114.6341463414%;
+  height: 43px;
   background-image: url('../images/instagram-1581266_1920(2).jpg');
 }
 
@@ -103,8 +103,8 @@ body {
   width: 4.6666666666%;
   min-height: 40px;
   margin: -58px 0 0 1.16146%;
-  font-family: Oswald;
+  font-family: Optima-Regular;
   font-size: 2.188em;
-  font-weight: 300;
+  font-weight: normal;
   color: rgb(230, 230, 230);
 }
