--- a/css/index.css
+++ b/css/index.css
@@ -14,13 +14,6 @@ body {
   margin-top: -3px;
 }
 
-.container .element {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-color: rgb(222, 222, 222);
-}
-
 .container .text {
   font-size: 1em;
   color: rgb(0, 0, 0);
@@ -36,7 +29,7 @@ body {
 
 .container-1 {
   position: relative;
-  z-index: 10;
+  z-index: 11;
   width: 18.1666666666%;
   height: 22px;
   margin: 5px 0 0 1.08073%;
@@ -44,7 +37,7 @@ body {
 
 .container-2 {
   position: relative;
-  z-index: 8;
+  z-index: 9;
   width: 3.75%;
   height: 43px;
   margin: 3px 0 0 76.6692708333%;
@@ -78,17 +71,31 @@ body {
 .element-3 {
   width: 114.6341463414%;
   height: 43px;
-  background-image: url('../images/instagram-1581266_1920(2).jpg');
+  background: url('../images/instagram-1581266_1920(2).jpg') rgb(222, 222, 222);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .element-4 {
-  width: 86.8312757201%;
-  height: 328px;
-  margin-left: 5.76132%;
-  background-image: url('../images/Mezky-logo-single-WHT-350PX.jpg');
+  clear: both;
+  width: 511.1111111111%;
+  height: 258px;
+  margin: 131px 0 0 -2211.07639%;
+  background-color: rgb(177, 164, 50);
 }
 
 .element-5 {
+  width: 86.8312757201%;
+  height: 328px;
+  margin-left: 5.76132%;
+  background: url('../images/Mezky-logo-single-WHT-350PX.jpg') rgb(222, 222, 222);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.element-6 {
   clear: both;
   width: 100%;
   height: 318px;
