--- a/css/index.css
+++ b/css/index.css
@@ -4,45 +4,25 @@ body {
   color: rgb(0, 0, 0);
 }
 
-.container .element {
-  float: left;
-  width: 93.0366225839%;
-  height: 339px;
-  margin-left: 3.45371%;
-  background: url('../images/Mezky-logo-single-WHT-2000px(7).jpg') rgb(222, 222, 222);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-}
-
 .text {
   position: absolute;
-  top: 724px;
-  left: 43.9166666666%;
-  z-index: 9;
+  top: 559px;
+  left: 44%;
+  z-index: 7;
   font-size: 1em;
   color: rgb(0, 0, 0);
 }
 
-._container {
-  position: absolute;
-  top: 120px;
-  left: 37.1666666666%;
-  z-index: 5;
-  width: 25.5989583333%;
-  height: 339px;
-}
-
-.container-2 {
+.container-1 {
   position: relative;
   float: left;
   clear: both;
   width: 8%;
   height: 22px;
-  margin: 482px 0 0 57.91276%;
+  margin: 482px 0 0 57.91146%;
 }
 
-.container-3 {
+.container-2 {
   position: absolute;
   top: 691px;
   left: 41.6666666666%;
@@ -73,7 +53,7 @@ body {
   position: relative;
   float: left;
   clear: both;
-  z-index: 7;
+  z-index: 5;
   width: 100%;
   height: 99px;
   margin-top: -61px;
@@ -83,13 +63,28 @@ body {
   background-position: center center;
 }
 
+.element-4 {
+  position: absolute;
+  top: 137px;
+  left: 0;
+  right: 0;
+  z-index: 8;
+  width: 14.8333333333%;
+  height: 218px;
+  margin: 0 auto;
+  background: url('../images/Mezky-logo-single-WHT-2000px(7).jpg') rgb(222, 222, 222);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
 .element-5 {
   position: absolute;
-  top: 603px;
-  left: 46.9166666666%;
-  z-index: 6;
-  width: 6.1666666666%;
-  height: 74px;
+  top: 474px;
+  left: 47.1666666666%;
+  z-index: 4;
+  width: 5%;
+  height: 60px;
   background: url('../images/instagram-1581266_1920(3).jpg') rgb(222, 222, 222);
   background-repeat: no-repeat;
   background-size: cover;
