--- a/css/index.css
+++ b/css/index.css
@@ -19,31 +19,23 @@ body {
 }
 
 .text {
+  position: relative;
   float: left;
-  margin-top: 3px;
+  clear: both;
+  z-index: 8;
+  margin: 6px 0 0 0.58333%;
   font-size: 1em;
   color: rgb(0, 0, 0);
 }
 
-._container {
-  position: absolute;
-  top: 596px;
-  left: 0;
-  right: 0;
-  z-index: 9;
-  width: 12.0833333333%;
-  height: 28px;
-  margin: 0 auto;
-}
-
-.container-2 {
+.container-1 {
   position: absolute;
   top: 691px;
   left: 41.6666666666%;
   z-index: 3;
 }
 
-.container-3 {
+.container-2 {
   position: relative;
   float: left;
   clear: both;
@@ -90,7 +82,7 @@ body {
   z-index: 1;
   width: 100%;
   height: 1292px;
-  margin-top: 617px;
+  margin-top: 589px;
   background: url('../images/IMG-7437(3).JPG') rgba(0, 0, 0, 0.69);
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,13 +90,13 @@ body {
 }
 
 .image-1 {
-  top: 632px;
+  top: 116px;
   z-index: 7;
-  width: 75px;
+  width: 350px;
 }
 
 .image-2 {
-  top: 140px;
+  top: 542px;
   z-index: 6;
-  width: 350px;
+  width: 75px;
 }
